--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <h2>Чем Хорош Gold Fitness?</h2>
 
                         <span>
-                            <h5>Выгодная система оплаты</h5>У нас несгораемый абонимент - вы платите только за те
+                            <h5>Выгодная система оплаты</h5>У нас несгораемый абонемент - вы платите только за те
                             занятия, которые посетили.
                         </span>
                         <span>
@@ -291,18 +291,18 @@
                     </a>
 
                     <a href="shop-3.html" class="square">
-                        <div class="slick_img"><img src="./assets/images/Shop/10530943-6634663400582052.jpg"></div>
-                        <h6>Impact Whey Protein</h6>
+                        <div class="slick_img"><img src="./assets/images/Shop/Sinta.jpeg"></div>
+                        <h6>Syntha Gold</h6>
                         <div class="slick_text">Протеин</div>
-                        <div class="about_product"> Первоклассная сыворотка, порция . . .</div>
+                        <div class="about_product">Ultimate Nutrition Syntha Gold это . . .</div>
 
                     </a>
                     <a href="shop-4.html" class="square">
-                        <div class="slick_img"><img src="./assets/images/Shop/10530050-9574620647469231.jpg">
+                        <div class="slick_img"><img src="./assets/images/Shop/MuscleTech.jpg">
                         </div>
-                        <h6>Creatine Monohydrate</h6>
-                        <div class="slick_text">Креатин</div>
-                        <div class="about_product"> Наш эффективный порошок является . . .</div>
+                        <h6>Muscle Tech Protein</h6>
+                        <div class="slick_text">Muscle Tech Protein</div>
+                        <div class="about_product"> MuscleTech Nitro Tech Whey Gold –  эффективная . . .</div>
 
                     </a>
                     <a href="shop-5.html" class="square">
@@ -553,7 +553,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-6 col-md-6 col-12">
                     <div class="blog-item">
                         <div class="blog-img">
                             <img src="https://avatars.mds.yandex.net/get-pdb/216365/287a3ca9-a6f8-459d-811c-3d71c05abc72/s1200 "
@@ -586,7 +586,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-6 col-md-6 col-12">
                     <div class="blog-item">
                         <div class="blog-img">
                             <img src="assets/images/blog/C0FA7ED4-9A18-443C-A16B-BB25DA46C39D.jpeg" alt="">
@@ -620,7 +620,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+               <!-- <div class="col-lg-4 col-md-6 col-12">
                     <div class="blog-item">
                         <div class="blog-img">
                             <img src="https://st2.depositphotos.com/2853475/7425/i/950/depositphotos_74259261-stock-photo-friends-in-a-gym.jpg"
@@ -651,10 +651,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
-    </div>
+    </div> 
     <!-- blog-area start -->
 
     <!-- .footer-area start -->
