--- a/shop-3.html
+++ b/shop-3.html
@@ -127,35 +127,34 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="./assets/images/Shop/10530943-6634663400582052.jpg"
-                        class="imgShop">
+                    <img src="./assets/images/Shop/Sinta.jpeg" class="imgShop">
                 </div>
                 <div class="col-md-8">
 
                     <div class="head">
-                        <h1>Impact Whey Protein</h1>
+                        <h1>Syntha Gold</h1>
                     </div>
                     <div class="row combain">
                         <div class="col-md-6">
                             <div class="margin-top">
                                 Производитель:
-                                <a href="https://www.myprotein.ru/" target="_blank">MyProtein</a>
+                                <a href="https://www.ultimatenutrition.com/" target="_blank">Ultimate Nutrition</a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <img src="assets/images/Shop/usa.svg" class="flagShop">
-                            Russia
+                            United States
                         </div>
                     </div>
                     <div class="row combain margin-top">
                         <div class="col-md-6">
                             Стоимость
                             <br>
-                            <span>4500 сом</span>
+                            <span>3700 сом</span>
                         </div>
                         <div class="col-md-6">
                             Вес:<br>
-                            <span>4.0 кг</span>
+                            <span>2.7 кг</span>
                         </div>
 
                     </div>
@@ -166,20 +165,26 @@
 
                     <div class="text">
                         <p class="text-center"><strong>Описание</strong></p>
-                        <p>Первоклассная сыворотка, каждая порция которой содержит 21 г белка (для варианта без вкусовых
-                            добавок), обеспечит организм необходимым белком, полученным из качественного источника — из
-                            того же коровьего молока, из которого производятся молочные продукты на вашем столе. Продукт
-                            подвергается естественной фильтрации и распылительной сушке, что делает возможным
-                            производство полностью натуральной пищевой добавки.
-                            Удобный в применении протеин отличного качества, помогает набирать и поддерживать
-                            необходимый объем мышечной массы1. Этот продукт, одна порция которого содержит 1,9 г жира, 1
-                            г углеводов и всего 103 калории, станет отличным помощником в достижении ваших спортивных
-                            целей.<br><br><span class="other">
-                                Ключевые преимущества:
-                            </span>
-                            В одной порции содержится 21 г белка (для варианта без вкусовых добавок)
-                            4,5 г кислот BCAA
-                            Низкий уровень содержания сахара.</p>
+                        <p>Ultimate Nutrition Syntha Gold это многокомпонентная высококачественная
+                            смесь сывороточного, казеинового, молочного и яичного протеинов. Когда вы
+                            добавляете средний и медленноусваивающиеся протеины к быстрому
+                            сывороточному протеину, то синтез протеина длится намного дольше, чем с
+                            сывороточным протеином в одиночку. Синтез протеина ведет к росту мышц,
+                            поэтому, чем дольше длится синтез протеина, тем больше мышечной массы
+                            вы нарастите и быстрее восстановитесь. Каждая порция нашего
+                            многокомпонентного протеина дает вам 20 грамм быстрого, среднего и
+                            медленноусваивающегося протеинов. Сначала в работу вступит
+                            гидролизованный изолят сывороточного протеина, который усвоится
+                            приблизительно за полчаса, далее начнет работать изолят сывороточного
+                            протеина (2,5 часа), далее подхватит его концентрат сывороточного
+                            протеина (3,5 часа), потом яичный протеин (4 часа), изолят молочного
+                            протеина (4 часа), концентрат молочного протеина (5 часов) и завершит
+                            работу мицеллярный казеин (6 часов). Итого, одна мерная ложка нашего
+                            протеина будет питать, восстанавливать и растить ваши мышцы вплоть до
+                            6 часов! Не важно, вы любитель или профессиональный атлет, несколько
+                            ложек Syntha Gold будут поддерживать вас круглые сутки!<br><br>
+
+                        </p>
                     </div>
                 </div>
             </div>
