--- a/shop-4.html
+++ b/shop-4.html
@@ -127,30 +127,30 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="./assets/images/Shop/10530050-9574620647469231.jpg" class="imgShop">
+                    <img src="./assets/images/Shop/MuscleTech.jpg" class="imgShop">
                 </div>
                 <div class="col-md-8">
 
                     <div class="head">
-                        <h1>Creatine Monohydrate</h1>
+                        <h1>Nitro Tech Whey Gold</h1>
                     </div>
                     <div class="row combain">
                         <div class="col-md-6">
                             <div class="margin-top">
                                 Производитель:
-                                <a href="https://www.myprotein.ru/" target="_blank">MyProtein</a>
+                                <a href="https://www.muscletech.com/" target="_blank">MuscleTech</a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <img src="assets/images/Shop/usa.svg" class="flagShop">
-                            Russia
+                            United States
                         </div>
                     </div>
                     <div class="row combain margin-top">
                         <div class="col-md-6">
                             Стоимость
                             <br>
-                            <span>4500 сом</span>
+                            <span>4100 сом</span>
                         </div>
                         <div class="col-md-6">
                             Вес:<br>
@@ -165,25 +165,26 @@
 
                     <div class="text">
                         <p class="text-center"><strong>Описание</strong></p>
-                        <p>Наш эффективный порошок является одной из самых изучаемых в мире форм креатина. Научно
-                            доказано, что она повышает физическую результативность1, улучшая общие возможности
-                            организма.Поступление креатина из пищи, такой как мясо и рыба, может оказаться
-                            затруднительным, поскольку вам требуется достаточно большой объем. Наше решение позволяет
-                            восполнить потребность быстро и удобно.
-                            Поступление креатина из пищи, такой как мясо и рыба, может оказаться затруднительным,
-                            поскольку вам требуется достаточно большой объем. Наше решение позволяет восполнить
-                            потребность быстро и удобно.
-
-                            Наша повышающая общие возможности организма1 пищевая добавка с креатинмоногидратом подходит
-                            абсолютно всем — она помогает улучшить результаты тренировок в зале, на беговой дорожке и на
-                            поле.
-                            <br><br><span class="other">
-                                Ключевые преимущества:
-                            </span>
-                            Доказанное улучшение физической результативности1
-                            Способен улучшать возможности организма1
-                            Удобная пищевая добавка на каждый день
-                            Отлично подходит для всех видов спорта и нагрузок</p>
+                        <p>MuscleTech Nitro Tech Whey Gold – эффективная белковая формула на основе изолята
+                            сывороточного
+                            протеина и пептидов, предназначенная для спортсменов-бодибилдеров. Производится способом
+                            холодной
+                            микрофильтрации, что гарантирует высокое качество белка. В составе присутствуют
+                            глютамин и незаменимые аминокислоты ряда ВСАА, необходимые для роста и правильного развития
+                            мышц.
+                            Продукт полностью усваивается организмом. Выпускается в форме порошка, легко растворимого в
+                            воде или обезжиренном молоке.
+                            <br><br>
+                            Пептиды гидролизованной сыворотки — это максимально быстро усваивающийся протеин на планете,
+                            именно поэтому он входит в состав нашей формулы! Благодаря микронизированному изоляту
+                            сывороточного протеина, а также концентрату сыворотки, Nitro-Tech 100% Whey Gold обладает
+                            высочайшей абсорбцией, хорошо переваривается и смешивается. Каждая мерная ложка содержит 24
+                            г ультра премиального протеина, включая 5,5 г аминокислот с разветвленной цепью и 4 г
+                            глутамина и прекурсора. При производстве Nitro-Tech 100% Whey Gold используется продвинутый
+                            процесс холодной микрофильтрации для гарантии высочайшего качества сывороточного протеина.
+                            Благодаря отмеченным наградами вкусам, Nitro-Tech 100% Whey Gold придется по вкусу не только
+                            вашим мышцам, но и вашим рецепторам.
+                        </p>
                     </div>
                 </div>
             </div>
