--- a/shop-7.html
+++ b/shop-7.html
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/images/Shop/usa.svg" class="flagShop">
+                            <img src="assets/images/Shop/FlagRussia.png" class="flagShop">
                             Russia
                         </div>
                     </div>
@@ -150,11 +150,11 @@
                         <div class="col-md-6">
                             Стоимость
                             <br>
-                            <span>4500 сом</span>
+                            <span>2500 сом</span>
                         </div>
                         <div class="col-md-6">
                             Вес:<br>
-                            <span>4.0 кг</span>
+                            <span>100 капсул</span>
                         </div>
 
                     </div>
