--- a/shop-6.html
+++ b/shop-6.html
@@ -151,11 +151,11 @@
                         <div class="col-md-6">
                             Стоимость
                             <br>
-                            <span>4500 сом</span>
+                            <span>2500 сом</span>
                         </div>
                         <div class="col-md-6">
                             Вес:<br>
-                            <span>4.0 кг</span>
+                            <span>30 порций</span>
                         </div>
 
                     </div>
