--- a/shop-9.html
+++ b/shop-9.html
@@ -151,11 +151,11 @@
                         <div class="col-md-6">
                             Стоимость
                             <br>
-                            <span>4500 сом</span>
+                            <span>1000 сом</span>
                         </div>
                         <div class="col-md-6">
                             Вес:<br>
-                            <span>4.0 кг</span>
+                            <span>300 гр</span>
                         </div>
 
                     </div>
