--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <div class="features-area features-style-2" id="shop">
         <div class="container">
             <div class="section-title text-center">
-                <span>Покупай Спортивную Еду По Оптимальной Цене</span>
+                <span>Покупай Спортивное Питание По Оптимальной Цене</span>
                 <h2>Наши товары</h2>
                 <div class="multiple-items">
                     <a href="shop.html" class="square">
@@ -480,11 +480,9 @@
                             <img src="assets/images/team/photoeditorsdk-export.png " alt="">
                             <div class="social-1st">
                                 <ul>
-                                    <!-- <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                    </li> -->
-                                    <li><a href="index.html#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                    <li><a href="https://twitter.com/mer43693843"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                     </li>
-                                    <li><a href="index.html#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                    <li><a href="https://www.instagram.com/nurmuhamedov26/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -501,11 +499,7 @@
                             <img src="assets/images/team/1FA7FE41-CFAA-4850-9E1F-E07535A47175.jpeg" alt="">
                             <div class="social-1st">
                                 <ul>
-                                    <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                    </li>
-                                    <li><a href="index.html#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                                    </li>
-                                    <li><a href="index.html#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                    <li><a href="https://www.instagram.com/furhat_s/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -519,21 +513,17 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team-single">
                         <div class="team-img">
-                            <img src="assets/images/team/3.jpg" alt="">
+                            <img src="assets/images/team/Ilya.jpg" alt="">
                             <div class="social-1st">
                                 <ul>
-                                    <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                    </li>
-                                    <li><a href="index.html#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                                    </li>
-                                    <li><a href="index.html#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                    <li><a href="https://www.instagram.com/ilyaskiba/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team-content">
-                            <h4>Фурхат</h4>
-                            <span>Logistic Maneger</span>
+                            <h4>Илья</h4>
+                            <span>Тренер</span>
                         </div>
                     </div>
                 </div>
