--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         </div>
                         <h6>Muscle Tech Protein</h6>
                         <div class="slick_text">Muscle Tech Protein</div>
-                        <div class="about_product"> MuscleTech Nitro Tech Whey Gold –  эффективная . . .</div>
+                        <div class="about_product"> MuscleTech Nitro Tech Whey Gold . . .</div>
 
                     </a>
                     <a href="shop-5.html" class="square">
