Adaptivity Problem Fixed

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </section>
     <!-- feature-area start -->
     <div class="features-area features-style-2" id="shop">
-        <div class="container">
+        <div class="container carusel">
             <div class="section-title text-center">
                 <span>Покупай Спортивное Питание По Оптимальной Цене</span>
                 <h2>Наши товары</h2>
@@ -286,7 +286,7 @@
                         </div>
                         <h6>Optimum Nutrition Serious</h6>
                         <div class="slick_text">Гейнер</div>
-                        <div class="about_product"> 1250 калорий в порции с натуральным вкусом . . .</div>
+                        <div class="about_product"> 1250 калорий в порции с натуральным . . .</div>
 
                     </a>
 
@@ -327,7 +327,7 @@
                         <h6>Asia Black</h6>
                         <div class="slick_text">Жиросжигатель
                         </div>
-                        <div class="about_product"> Действующим веществом жиросжигателя Asia . . .</div>
+                        <div class="about_product"> Действующим веществом жиросжигателя . . .</div>
                     </a>
                     <a href="shop-8.html" class="square">
                         <div class="slick_img"><img src="./assets/images/Shop/387546_1.jpg"></div>
@@ -480,9 +480,9 @@
                             <img src="assets/images/team/photoeditorsdk-export.png " alt="">
                             <div class="social-1st">
                                 <ul>
-                                    <li><a href="https://twitter.com/mer43693843"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                    <li><a target="_blank" href="https://twitter.com/mer43693843"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                     </li>
-                                    <li><a href="https://www.instagram.com/nurmuhamedov26/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                    <li><a target="_blank" href="https://www.instagram.com/nurmuhamedov26/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -499,7 +499,7 @@
                             <img src="assets/images/team/1FA7FE41-CFAA-4850-9E1F-E07535A47175.jpeg" alt="">
                             <div class="social-1st">
                                 <ul>
-                                    <li><a href="https://www.instagram.com/furhat_s/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                    <li><a target="_blank" href="https://www.instagram.com/furhat_s/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -516,7 +516,7 @@
                             <img src="assets/images/team/Ilya.jpg" alt="">
                             <div class="social-1st">
                                 <ul>
-                                    <li><a href="https://www.instagram.com/ilyaskiba/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                    <li><a target="_blank" href="https://www.instagram.com/ilyaskiba/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -610,38 +610,7 @@
                         </div>
                     </div>
                 </div>
-               <!-- <div class="col-lg-4 col-md-6 col-12">
-                    <div class="blog-item">
-                        <div class="blog-img">
-                            <img src="https://st2.depositphotos.com/2853475/7425/i/950/depositphotos_74259261-stock-photo-friends-in-a-gym.jpg"
-                                alt="">
-                            <div class="blog-s-text">
-                                <div class="blog-content">
-                                    <h3>Приводи друзей и получай скидку</h3>
-                                </div>
-                                <div class="blog-content-sub blog-content-sub-2">
-                                    <ul>
-                                        <li><a>Fitness</a></li>
-                                        <li>October 13, 2018</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="blog-text">
-                                <div class="blog-content blog-content2">
-                                    <h3><a >Для тебя и твоих друзей </a></h3>
-                                    <p>Приведи троих друзей и получите скидку в виде 30%. </p>
-                                    <a href="#footer">Узнать больше . . .</a>
-                                </div>
-                                <div class="blog-content-sub blog-content-sub-2">
-                                    <ul>
-                                        <li><a>Fitness</a></li>
-                                        <li>October 13, 2018</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
+               
             </div>
         </div>
     </div> 
