--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-12 col-12 col-lg-6">
                         <ul class="d-flex account_login-area">
-                            <li><i class="fa fa-clock-o" aria-hidden="true"></i></i>Пон - Вос : 7.00 - 23.00 ,
+                            <li><i class="fa fa-clock-o" aria-hidden="true"></i></i>Пон - Суб : 7.00 - 23.00 ,
                                 Воскресенье закрыто!</li>
                         </ul>
                     </div>
