--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <section class="hero hero-slider-wrapper hero-style-1 hero-style-2">
         <div class="hero-slider">
             <div class="slide">
-                <img alt="" src="assets/images/slider/1.jpg" alt class="slider-bg">
+                <img  src="assets/images/slider/1.jpg"  class="slider-bg">
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img alt="" src="assets/images/slider/5c1631b05ba956feb0b568b5_image-120.jpg" alt class="slider-bg">
+                <img  src="assets/images/slider/5c1631b05ba956feb0b568b5_image-120.jpg"  class="slider-bg">
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img alt="" src="assets/images/slider/2.jpg" alt class="slider-bg">
+                <img  src="assets/images/slider/2.jpg"  class="slider-bg">
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
@@ -173,13 +173,13 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="img-out">
-                        <img alt="" src="./assets/images/GoldImages/photo_2019-02-27_22-53-40.jpg">
+                        <img  src="./assets/images/GoldImages/photo_2019-02-27_22-53-40.jpg">
                     </div>
                 </div>
                 <div class="col-lg-6 sec-p">
                     <div class="about-content">
                         <div class="gym">
-                            <img alt="" src="./assets/images/gym.svg">
+                            <img  src="./assets/images/gym.svg">
                         </div>
                         <h2>Чем Хорош Gold Fitness?</h2>
 
@@ -214,21 +214,21 @@
                     <div class="img-container">
 
                         <a href="./assets/images/GoldImages/photo_2019-02-27_22-53-40.jpg"
-                            data-lightbox="mygallery"><img alt="" class="myImg img"
+                            data-lightbox="mygallery"><img  class="myImg img"
                                 src="./assets/images/GoldImages/photo_2019-02-27_22-53-40.jpg" /></a>
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <a href="./assets/images/GoldImages/img.jpg" data-lightbox="mygallery"> <img alt="" class="myImg img"
+                        <a href="./assets/images/GoldImages/img.jpg" data-lightbox="mygallery"> <img  class="myImg img"
                                 src="./assets/images/GoldImages/img.jpg" /> </a>
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <a href="./assets/images/GoldImages/img5.jpg" data-lightbox="mygallery"> <img alt="" class=" myImg img"
+                        <a href="./assets/images/GoldImages/img5.jpg" data-lightbox="mygallery"> <img  class=" myImg img"
                                 src="./assets/images/GoldImages/img5.jpg" /></a>
                     </div>
                 </div>
@@ -238,21 +238,21 @@
             <div class=" row abc">
                 <div class="card col-md-4 ">
                     <div class="img-container">
-                        <a href="./assets/images/GoldImages/img2.jpg" data-lightbox="mygallery"> <img alt="" class=" myImg img"
+                        <a href="./assets/images/GoldImages/img2.jpg" data-lightbox="mygallery"> <img  class=" myImg img"
                                 src="./assets/images/GoldImages/img2.jpg" /></a>
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <a href="./assets/images/GoldImages/img3.jpg" data-lightbox="mygallery"> <img alt="" class=" myImg img"
+                        <a href="./assets/images/GoldImages/img3.jpg" data-lightbox="mygallery"> <img  class=" myImg img"
                                 src="./assets/images/GoldImages/img3.jpg" /></a>
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <a href="./assets/images/GoldImages/img4.jpg" data-lightbox="mygallery"> <img alt="" class="myImg img"
+                        <a href="./assets/images/GoldImages/img4.jpg" data-lightbox="mygallery"> <img  class="myImg img"
                                 src="./assets/images/GoldImages/img4.jpg" /></a>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
                 <h2>Наши товары</h2>
                 <div class="multiple-items">
                     <a href="shop.html" class="square">
-                        <div class="slick_img"> <img alt="" src="assets/images/Shop/optimum-nutrition-gold-standard.jpg"></div>
+                        <div class="slick_img"> <img  src="assets/images/Shop/optimum-nutrition-gold-standard.jpg"></div>
                         <h6>Optimum Nutrition Gold
                         </h6>
                         <div class="slick_text">Протеин</div>
@@ -277,7 +277,7 @@
                     </a>
 
                     <a href="shop-2.html" class="square">
-                        <div class="slick_img"><img alt=""
+                        <div class="slick_img"><img 
                                 src="https://d3n4pjass4bd0n.cloudfront.net/images/thumbnails/500/500/detailed/79/serious-mass-gainer-5-45-banan.jpg">
                         </div>
                         <h6>Optimum Nutrition Serious</h6>
@@ -287,14 +287,14 @@
                     </a>
 
                     <a href="shop-3.html" class="square">
-                        <div class="slick_img"><img alt="" src="./assets/images/Shop/Sinta.jpeg"></div>
+                        <div class="slick_img"><img  src="./assets/images/Shop/Sinta.jpeg"></div>
                         <h6>Syntha Gold</h6>
                         <div class="slick_text">Протеин</div>
                         <div class="about_product">Ultimate Nutrition Syntha Gold это . . .</div>
 
                     </a>
                     <a href="shop-4.html" class="square">
-                        <div class="slick_img"><img alt="" src="./assets/images/Shop/MuscleTech.jpg">
+                        <div class="slick_img"><img  src="./assets/images/Shop/MuscleTech.jpg">
                         </div>
                         <h6>Muscle Tech Protein</h6>
                         <div class="slick_text">Muscle Tech Protein</div>
@@ -302,7 +302,7 @@
 
                     </a>
                     <a href="shop-5.html" class="square">
-                        <div class="slick_img"><img alt=""
+                        <div class="slick_img"><img 
                                 src="./assets/images/Shop/scivation-xtend-bcaa-s-2596665327728_480x480.jpg"></div>
                         <h6>XTEND BCAA'S</h6>
                         <div class="slick_text">BCAA</div>
@@ -310,7 +310,7 @@
 
                     </a>
                     <a href="shop-6.html" class="square">
-                        <div class="slick_img"><img alt="" src="./assets/images/Shop/Essentials_BCAA_30serve_caps_grande.jpg ">
+                        <div class="slick_img"><img  src="./assets/images/Shop/Essentials_BCAA_30serve_caps_grande.jpg ">
                         </div>
                         <h6>BCAA 3:2:1</h6>
                         <div class="slick_text">BCAA
@@ -318,7 +318,7 @@
                         <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
                     </a>
                     <a href="shop-7.html" class="square">
-                        <div class="slick_img"><img alt="" src="./assets/images/Shop/5f70ed68ae09ee77a0e30e0825c4b476.jpg">
+                        <div class="slick_img"><img  src="./assets/images/Shop/5f70ed68ae09ee77a0e30e0825c4b476.jpg">
                         </div>
                         <h6>Asia Black</h6>
                         <div class="slick_text">Жиросжигатель
@@ -326,14 +326,14 @@
                         <div class="about_product"> Действующим веществом жиросжигателя . . .</div>
                     </a>
                     <a href="shop-8.html" class="square">
-                        <div class="slick_img"><img alt="" src="./assets/images/Shop/387546_1.jpg"></div>
+                        <div class="slick_img"><img  src="./assets/images/Shop/387546_1.jpg"></div>
                         <h6>Syntha-6</h6>
                         <div class="slick_text">Протеин
                         </div>
                         <div class="about_product"> Комбинированная биодобавка Синта-6 . . .</div>
                     </a>
                     <a href="shop-9.html" class="square">
-                        <div class="slick_img"><img alt="" 
+                        <div class="slick_img"><img  
                                 src="https://img6.hkrtcdn.com/7758/prd_775755-ON-Optimum-Nutrition-Micronized-Creatine-Powder-Unflavoured-0.66-lb_o.jpg">
                         </div>
                         <h6>Creatine Powder
@@ -473,7 +473,7 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team-single">
                         <div class="team-img">
-                            <img alt="" src="assets/images/team/photoeditorsdk-export.png " alt="">
+                            <img  src="assets/images/team/photoeditorsdk-export.png " >
                             <div class="social-1st">
                                 <ul>
                                     <li><a target="_blank" href="https://twitter.com/mer43693843"><i class="fa fa-twitter" aria-hidden="true"></i></a>
@@ -492,7 +492,7 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team-single">
                         <div class="team-img">
-                            <img alt="" src="assets/images/team/1FA7FE41-CFAA-4850-9E1F-E07535A47175.jpeg" alt="">
+                            <img  src="assets/images/team/1FA7FE41-CFAA-4850-9E1F-E07535A47175.jpeg" >
                             <div class="social-1st">
                                 <ul>
                                     <li><a target="_blank" href="https://www.instagram.com/furhat_s/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -509,7 +509,7 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team-single">
                         <div class="team-img">
-                            <img alt="" src="assets/images/team/Ilya.jpg" alt="">
+                            <img  src="assets/images/team/Ilya.jpg" >
                             <div class="social-1st">
                                 <ul>
                                     <li><a target="_blank" href="https://www.instagram.com/ilyaskiba/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -542,8 +542,8 @@
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img alt="" src="https://avatars.mds.yandex.net/get-pdb/216365/287a3ca9-a6f8-459d-811c-3d71c05abc72/s1200 "
-                                alt="">
+                            <img  src="https://avatars.mds.yandex.net/get-pdb/216365/287a3ca9-a6f8-459d-811c-3d71c05abc72/s1200 "
+                                >
                             <div class="blog-s-text">
                                 <div class="blog-content">
                                     <h3>Следите за новостями у нас в Instagram</h3>
@@ -575,7 +575,7 @@
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img alt="" src="assets/images/blog/C0FA7ED4-9A18-443C-A16B-BB25DA46C39D.jpeg" alt="">
+                            <img  src="assets/images/blog/C0FA7ED4-9A18-443C-A16B-BB25DA46C39D.jpeg" >
                             <div class="blog-s-text">
                                 <div class="blog-content">
                                     <h3>Жоломан Шершенбеков и Gold Fitness</h3>
