Full first screen

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img  src="assets/images/slider/5c1631b05ba956feb0b568b5_image-120.jpg"  class="slider-bg">
+                <img  src="assets/images/slider/4.jpg"  class="slider-bg">
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
